# tg-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
tg_cli/: __init__.py  __main__.py  app.py  config.py  messages.py
tg_cli/models/: dialog.py  message.py
tg_cli/screens/: auth_screen.py  main_screen.py  search_screen.py
tg_cli/styles/: app.tcss
tg_cli/telegram/: auth.py  client.py  media.py
tg_cli/widgets/: chat_list.py  message_input.py  message_view.py  splash.py  status_bar.py
