[project]
name = "tg-cli"
version = "0.1.0"
description = "Full-featured Telegram client for the terminal"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["telegram", "cli", "tui", "terminal", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "telethon>=1.36",
    "textual>=1.0",
    "python-dotenv>=1.0",
    "tomli-w>=1.0",
    "cryptg>=0.4",
    "aiofiles>=24.0",
]

[project.urls]
Homepage = "https://github.com/eveiljuice/tg-cli"
Repository = "https://github.com/eveiljuice/tg-cli"
Issues = "https://github.com/eveiljuice/tg-cli/issues"

[project.scripts]
tg-cli = "tg_cli.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
